fixed mobile menu overlaping

--- a/src/app/main-header/main-header.component.css
+++ b/src/app/main-header/main-header.component.css
@@ -28,20 +28,21 @@ h1 {
   transform: translate(0%, -50%);
 }
 
-button {
+.register-button {
   border-style: solid;
   border-width: 1px;
   border-radius: 15px;
   border-color: white;
   background-color: rgba(0, 0, 0, 0.4);
   cursor: pointer;
-  position: relative;
-  left: 0%;
   transition: .5s ease;
   padding: 10px 10px !important;
+  font-family: Century Gothic, monospace;
+  font-size: 18px;
+  color: white;
 }
 
-button:hover {
+.register-button:hover {
   background-color: rgba(252, 206, 36, 0.4);
 }
 
@@ -49,29 +50,17 @@ button:focus{
   outline:none !important;
 }
 
-.register-button {
-  font-family: Century Gothic, monospace;
-  font-size: 18px;
-  color: white;
-  margin: 0;
-  display: inline;
-  white-space: nowrap;
-}
-
-body {
-  background-color: #d3df91;
-}
-
-@media only screen and (max-width: 800px) {
-
+@media only screen and (max-width: 768px) {
 
   h1{
     font-size: 28px;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
+    padding-top: 25px;
   }
 
   .top-image{
     height: 160px;
+    width: auto;
   }
 
   .logo{
@@ -82,28 +71,16 @@ body {
     font-size: 14px;
   }
 
-  .top-text {
-    buttom: 20% !important;
-  }
-  .main-text{
-    margin-top: 0px;
-  }
-
-
   #menuToggle
   {
     position: absolute;
     top: 0px;
     left: 10px;
     z-index: 1;
-
-    -webkit-user-select: none;
-    user-select: none;
   }
 
   #menuToggle input
   {
-    display: block;
     width: 40px;
     height: 100%;
     position: absolute;
@@ -130,13 +107,13 @@ body {
     background: #cdcdcd;
     border-radius: 0px;
 
-    z-index: 6;
+    z-index: 101;
 
     transform-origin: 4px 0px;
 
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-    background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-    opacity 0.55s ease;
+    background 0.2s cubic-bezier(0.77,0.2,0.05,1.0),
+    opacity 0.2s ease;
   }
 
   #menuToggle span:first-child
@@ -164,12 +141,16 @@ body {
     transform: rotate(-45deg) translate(0, -1px);
   }
 
-  .nav-link
-  {
+  .nav-link {
     color: black !important;
-    padding: 10px 0;
+    padding: 5px 0;
     font-size: 22px;
-    display: inline-block;
+    cursor: pointer;
+    float: left;
+  }
+
+  .nav-link:hover{
+    color: white!important;
   }
 
   #menuToggle input:checked ~ ul
@@ -177,30 +158,22 @@ body {
     transform: none;
   }
 
-
-  .hamburger-menu
-  {
-    z-index: 1;
+  .hamburger-menu {
     position: absolute;
-    width: auto !important;
-    height: auto !important;
+    width: auto;
+    height: auto;
     margin: -100px 0 0 -50px;
     padding: 50px;
     padding-top: 120px;
     background: rgba(252, 206, 36, 1);
-    list-style-type: none;
-    -webkit-font-smoothing: antialiased;
-    transform-origin: 0% 0%;
+    list-style-type: none;transform-origin: 0% 0%;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
     transform: translate(-100%, 0);
-
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
   }
-
 
 }
 
-
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 768px) {
 
   a {
     color: #fff !important;
@@ -209,32 +182,20 @@ body {
   ul{
     height: 100%;
     padding-top: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  li {
-    align-self: center;
-    list-style: none;
+    display: inline-flex;
   }
 
   .navbar-item {
-    position: relative;
-    align-self: center;
     cursor: pointer;
-    float: left;
+    align-self: center;
+    list-style: none;
+    margin: 0px 10px;
   }
 
   .navbar-item a {
     color: #FFF;
-    text-decoration: none;
     font: 20px Century Gothic, monospace;
-    margin: 0px 10px;
-    padding: 10px 15px;
     position: relative;
-    z-index: 0;
-    top: 600%;
   }
 
   .topBotomBordersOut a:before, .topBotomBordersOut a:after {
